--- a/src/WebviewAppShared/Pages/Xbim.razor
+++ b/src/WebviewAppShared/Pages/Xbim.razor
@@ -1,7 +1,10 @@
 ﻿
-@page "/"
+@page "/xbim"
 @inject IJSRuntime JSRuntime
 @inject NavigationManager NavigationManager
+@inject ShareState ShareState
+@using System.ComponentModel;
+@implements IDisposable
 
 
 
@@ -10,6 +13,10 @@
     <div id="viewer-container" style="background: linear-gradient(white, lightgray);width:100%;height:100%">
         <canvas id="viewer" style="width:100%;height:100%"></canvas>
         <div style="position: absolute; left: 5px; top: 5px; padding: 5px; z-index:200; " id="toolbargroup" class="ui-widget-header ui-corner-all">
+        
+        <button id="openFileLink" onclick="window.openFileLink2(); removeSvg();" title="Reset">
+            <svg viewBox="0 0 512 512"><path d="M142.9 142.9c62.2-62.2 162.7-62.5 225.3-1L327 183c-6.9 6.9-8.9 17.2-5.2 26.2s12.5 14.8 22.2 14.8H463.5c0 0 0 0 0 0H472c13.3 0 24-10.7 24-24V72c0-9.7-5.8-18.5-14.8-22.2s-19.3-1.7-26.2 5.2L413.4 96.6c-87.6-86.5-228.7-86.2-315.8 1C73.2 122 55.6 150.7 44.8 181.4c-5.9 16.7 2.9 34.9 19.5 40.8s34.9-2.9 40.8-19.5c7.7-21.8 20.2-42.3 37.8-59.8zM16 312v7.6 .7V440c0 9.7 5.8 18.5 14.8 22.2s19.3 1.7 26.2-5.2l41.6-41.6c87.6 86.5 228.7 86.2 315.8-1c24.4-24.4 42.1-53.1 52.9-83.7c5.9-16.7-2.9-34.9-19.5-40.8s-34.9 2.9-40.8 19.5c-7.7 21.8-20.2 42.3-37.8 59.8c-62.2 62.2-162.7 62.5-225.3 1L185 329c6.9-6.9 8.9-17.2 5.2-26.2s-12.5-14.8-22.2-14.8H48.4h-.7H40c-13.3 0-24 10.7-24 24z" /></svg>
+        </button>
             <button id="resetbutton" onclick="reset(); removeSvg();" title="Reset">
                 <svg viewBox="0 0 512 512"><path d="M142.9 142.9c62.2-62.2 162.7-62.5 225.3-1L327 183c-6.9 6.9-8.9 17.2-5.2 26.2s12.5 14.8 22.2 14.8H463.5c0 0 0 0 0 0H472c13.3 0 24-10.7 24-24V72c0-9.7-5.8-18.5-14.8-22.2s-19.3-1.7-26.2 5.2L413.4 96.6c-87.6-86.5-228.7-86.2-315.8 1C73.2 122 55.6 150.7 44.8 181.4c-5.9 16.7 2.9 34.9 19.5 40.8s34.9-2.9 40.8-19.5c7.7-21.8 20.2-42.3 37.8-59.8zM16 312v7.6 .7V440c0 9.7 5.8 18.5 14.8 22.2s19.3 1.7 26.2-5.2l41.6-41.6c87.6 86.5 228.7 86.2 315.8-1c24.4-24.4 42.1-53.1 52.9-83.7c5.9-16.7-2.9-34.9-19.5-40.8s-34.9 2.9-40.8 19.5c-7.7 21.8-20.2 42.3-37.8 59.8c-62.2 62.2-162.7 62.5-225.3 1L185 329c6.9-6.9 8.9-17.2 5.2-26.2s-12.5-14.8-22.2-14.8H48.4h-.7H40c-13.3 0-24 10.7-24 24z" /></svg>
             </button>
@@ -75,27 +82,29 @@
 
 
 @code {
-    private MarkupString result;
-
     protected override void OnInitialized()
     {
-        //  NavigationManager.LocationChanged += LocationChanged;
-
+        NavigationManager.LocationChanged += LocationChanged;
         base.OnInitialized();
-
+        ShareState.PropertyChanged += OnShareStateChanged;
     }
 
-    private void NavigateToStaticHtml()
+    void LocationChanged(object sender, LocationChangedEventArgs e)
     {
-        //result = new MarkupString(System.IO.File.ReadAllText("_content/WebviewAppShared/xbim/ifcModelSample.html"));
-
-
-        //   NavigationManager.NavigateTo("_content/WebviewAppShared/xbim/ifcModelSample.html");
+        NavigationManager.NavigateTo(e.Location, forceLoad: true);
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        // NavigationManager.NavigateTo(@"_content/WebviewAppShared/wwwroot/xbim/ifcModelSample.html");
-        // NavigationManager.NavigateTo("xbim/ifcModelSample.html");
+    }
+
+    private async void OnShareStateChanged(object? sender, PropertyChangedEventArgs e)
+    {
+        await JSRuntime.InvokeVoidAsync("window.openFileDialog2");
+    }
+
+    public void Dispose()
+    {
+        ShareState.PropertyChanged -= OnShareStateChanged;
     }
 }
