--- a/src/WebviewAppShared/Pages/Ifcjs.razor
+++ b/src/WebviewAppShared/Pages/Ifcjs.razor
@@ -69,36 +69,10 @@
 </div>
 
 
-<script>
-
-    window.startIfcJs();
-    document.getElementById('openFileLink').addEventListener('click', function () {
-        let inputElement = document.createElement('input');
-        inputElement.type = 'file';
-        inputElement.accept = '.ifc';
-
-        inputElement.addEventListener('change', function () {
-            if (inputElement.files.length > 0) {
-                let selectedFile = inputElement.files[0];
-                loadIfc(URL.createObjectURL(selectedFile), false);
-            }
-        });
-
-        inputElement.click();
-    });
-
-    function openFileDialog() {
-        let link = document.getElementById('openFileLink')
-        if (link) {
-            link.click();
-        } else {
-            console.error('Element with id "link" not found.');
-        }
-    }
-
-</script>
+<script src="_content/WebviewAppShared/ifcjs/JavaScript1.js"></script>
 
 @code {
+
     protected override void OnInitialized()
     {
         NavigationManager.LocationChanged += LocationChanged;
@@ -117,7 +91,7 @@
 
     private async void OnShareStateChanged(object? sender, PropertyChangedEventArgs e)
     {
-        await JSRuntime.InvokeVoidAsync("openFileDialog");
+       await JSRuntime.InvokeVoidAsync("window.openFileDialog");
     }
 
     public void Dispose()
