--- a/src/WebviewAppShared/Pages/_Host.cshtml
+++ b/src/WebviewAppShared/Pages/_Host.cshtml
@@ -15,8 +15,8 @@
 @*     <link rel="stylesheet" href="_content/WebviewAppShared/css/bootstrap/bootstrap.min.css" />
     <link href="_content/WebviewAppShared/css/site.css" rel="stylesheet" /> *@
     <link href="BlazorDesktopTest.styles.css" rel="stylesheet" />
-@*     <link href="_content/WebviewAppShared/ifcjs/viewer-styles.css" rel="stylesheet" />
-    <script src="_content/WebviewAppShared/ifcjs/bundle.js"></script> *@
+    <link href="_content/WebviewAppShared/ifcjs/styles.css" rel="stylesheet" />
+   @*  <script src="_content/WebviewAppShared/ifcjs/bundle.js"></script> *@
     <link href="_content/WebviewAppShared/xbim/jquery-ui.min.css" rel="stylesheet" />
     <link href="_content/WebviewAppShared/xbim/xbim-styles.css" rel="stylesheet" />
   
