--- a/src/xBIMWpfApp/App.xaml
+++ b/src/xBIMWpfApp/App.xaml
@@ -1,7 +1,7 @@
-<Application x:Class="IFCjsWpfApp.App"
+<Application x:Class="xBIMWpfApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:IFCjsWpfApp"
+             xmlns:local="clr-namespace:xBIMWpfApp"
              StartupUri="MainWindow.xaml"
              Startup="Application_Startup">
     <Application.Resources>
