--- a/src/WebviewAppShared/Pages/Xbim.razor
+++ b/src/WebviewAppShared/Pages/Xbim.razor
@@ -10,7 +10,7 @@
     <canvas id="viewer" style="width:100%;height:100%"></canvas>
     <div style="position: absolute; left: 5px; top: 5px; padding: 5px; z-index:200; " id="toolbargroup" class="ui-widget-header ui-corner-all">
 
-        <button id="openFileLink" onclick="window.openFileLink(); removeSvg();" title="Reset">
+        <button id="openFileLink" onclick="window.openFileLink(); removeSvg();" title="Load model">
             <svg viewBox="0 0 512 512"><path d="M288 109.3V352c0 17.7-14.3 32-32 32s-32-14.3-32-32V109.3l-73.4 73.4c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l128-128c12.5-12.5 32.8-12.5 45.3 0l128 128c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L288 109.3zM64 352H192c0 35.3 28.7 64 64 64s64-28.7 64-64H448c35.3 0 64 28.7 64 64v32c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V416c0-35.3 28.7-64 64-64zM432 456a24 24 0 1 0 0-48 24 24 0 1 0 0 48z" /></svg>
         </button>
         <button id="resetbutton" onclick="reset(); removeSvg();" title="Reset">
