--- a/src/WebviewAppShared/Shared/MainLayout.razor.css
+++ b/src/WebviewAppShared/Shared/MainLayout.razor.css
@@ -64,7 +64,7 @@
     }
 
     .main > div {
-        padding-left: 2rem !important;
+        /* padding-left: 2rem !important;*/
         padding-right: 1.5rem !important;
     }
 }
