--- a/src/WebviewAppShared/Pages/_Host.cshtml
+++ b/src/WebviewAppShared/Pages/_Host.cshtml
@@ -15,18 +15,18 @@
 
     <link href="BlazorDesktopTest.styles.css" rel="stylesheet" />
     @*Testing IFCjs. localhost/ifcjs *@
-    <link href="_content/WebviewAppShared/ifcjs/styles.css" rel="stylesheet" />
+@*     <link href="_content/WebviewAppShared/ifcjs/styles.css" rel="stylesheet" />
     <script src="_content/WebviewAppShared/ifcjs/main.js"></script>
-    <script src="_content/WebviewAppShared/ifcjs/common.js"></script>
+    <script src="_content/WebviewAppShared/ifcjs/common.js"></script> *@
 
 @*Testing xBIM localhost/xbim *@
-@*  <link href="_content/WebviewAppShared/xbim/jquery-ui.min.css" rel="stylesheet" />
+ <link href="_content/WebviewAppShared/xbim/jquery-ui.min.css" rel="stylesheet" />
     <link href="_content/WebviewAppShared/xbim/xbim-styles.css" rel="stylesheet" />
     <script src="_content/WebviewAppShared/xbim/jszip.min.js"></script>
     <script src="_content/WebviewAppShared/xbim/jquery-3.7.1.min.js"></script>
     <script src="_content/WebviewAppShared/xbim/jquery-ui.min.js"></script>
     <script src="_content/WebviewAppShared/xbim/split.min.js"></script>
-    <script src="_content/WebviewAppShared/xbim/viewer.js"></script> *@
+    <script src="_content/WebviewAppShared/xbim/viewer.js"></script>
 </head>
 <body>
 
